editors/tree-sitter-tnix/test/corpus/comments.txt
================================================================================
line comment
================================================================================

# hello
1

--------------------------------------------------------------------------------

(source_code
  (comment)
  (integer_expression))

================================================================================
block comment
================================================================================

/* block
   comment */ 1

--------------------------------------------------------------------------------

(source_code
  (comment)
  (integer_expression))

================================================================================
ignore directive
================================================================================

let
  # @tnix-ignore
  value = missing;
in value

--------------------------------------------------------------------------------

(source_code
  (let_expression
    (directive)
    (binding_set
      (binding
        (attrpath
          (identifier))
        (variable_expression
          (identifier))))
    (variable_expression
      (identifier))))

================================================================================
expected directive
================================================================================

# @tnix-expected
missing

--------------------------------------------------------------------------------

(source_code
  (directive)
  (variable_expression
    (identifier)))
