editors/tree-sitter-tnix/test/corpus/functions.txt
================================================================================
simple lambda
================================================================================

x: y: x

--------------------------------------------------------------------------------

(source_code
  (function_expression
    (identifier)
    (function_expression
      (identifier)
      (variable_expression
        (identifier)))))

================================================================================
formals
================================================================================

{ a, b ? 2, ... }: a

--------------------------------------------------------------------------------

(source_code
  (function_expression
    (formals
      (formal
        (identifier))
      (formal
        (identifier)
        (integer_expression))
      (ellipses))
    (variable_expression
      (identifier))))

================================================================================
empty formals
================================================================================

{ }: 1

--------------------------------------------------------------------------------

(source_code
  (function_expression
    (formals)
    (integer_expression)))

================================================================================
formals with trailing comma
================================================================================

{ a, b, }: a

--------------------------------------------------------------------------------

(source_code
  (function_expression
    (formals
      (formal
        (identifier))
      (formal
        (identifier)))
    (variable_expression
      (identifier))))

================================================================================
named formals after
================================================================================

{ a, ... }@args: args

--------------------------------------------------------------------------------

(source_code
  (function_expression
    (formals
      (formal
        (identifier))
      (ellipses))
    (identifier)
    (variable_expression
      (identifier))))

================================================================================
named formals before
================================================================================

args@{ a }: a

--------------------------------------------------------------------------------

(source_code
  (function_expression
    (identifier)
    (formals
      (formal
        (identifier)))
    (variable_expression
      (identifier))))

================================================================================
typed binder
================================================================================

(x :: Int): x

--------------------------------------------------------------------------------

(source_code
  (function_expression
    (typed_parameter
      (identifier)
      (type_identifier))
    (variable_expression
      (identifier))))

================================================================================
typed binder with function type
================================================================================

(f :: Int -> String): f 1

--------------------------------------------------------------------------------

(source_code
  (function_expression
    (typed_parameter
      (identifier)
      (function_type
        (type_identifier)
        (type_identifier)))
    (apply_expression
      (variable_expression
        (identifier))
      (integer_expression))))
