editors/tree-sitter-tnix/test/corpus/paths.txt
================================================================================
relative path
================================================================================

./foo.nix

--------------------------------------------------------------------------------

(source_code
  (path_expression
    (path_fragment)))

================================================================================
parent path
================================================================================

../bar/baz

--------------------------------------------------------------------------------

(source_code
  (path_expression
    (path_fragment)))

================================================================================
absolute path
================================================================================

/etc/hosts

--------------------------------------------------------------------------------

(source_code
  (path_expression
    (path_fragment)))

================================================================================
home path
================================================================================

~/.config/nix

--------------------------------------------------------------------------------

(source_code
  (hpath_expression
    (path_fragment)))

================================================================================
search path
================================================================================

<nixpkgs/lib>

--------------------------------------------------------------------------------

(source_code
  (spath_expression))

================================================================================
interpolated path
================================================================================

./dir/${name}.nix

--------------------------------------------------------------------------------

(source_code
  (path_expression
    (path_fragment)
    (interpolation
      (variable_expression
        (identifier)))
    (path_fragment)))

================================================================================
uri
================================================================================

https://example.org/x?y=1

--------------------------------------------------------------------------------

(source_code
  (uri_expression))
