editors/tree-sitter-tnix/test/corpus/strings.txt
================================================================================
simple string
================================================================================

"hello"

--------------------------------------------------------------------------------

(source_code
  (string_expression
    (string_fragment)))

================================================================================
interpolation
================================================================================

"a ${b} c"

--------------------------------------------------------------------------------

(source_code
  (string_expression
    (string_fragment)
    (interpolation
      (variable_expression
        (identifier)))
    (string_fragment)))

================================================================================
escapes
================================================================================

"quote \" newline \n dollar \${x} $${y} $"

--------------------------------------------------------------------------------

(source_code
  (string_expression
    (string_fragment)
    (escape_sequence)
    (string_fragment)
    (escape_sequence)
    (string_fragment)
    (dollar_escape)
    (string_fragment)))

================================================================================
empty indented string
================================================================================

''''

--------------------------------------------------------------------------------

(source_code
  (indented_string_expression))

================================================================================
indented string
================================================================================

''
  echo ${pkgs.hello}/bin/hello
  ''${literal} ''' ''\n $
''

--------------------------------------------------------------------------------

(source_code
  (indented_string_expression
    (string_fragment)
    (interpolation
      (select_expression
        (variable_expression
          (identifier))
        (attrpath
          (identifier))))
    (string_fragment)
    (dollar_escape)
    (string_fragment)
    (escape_sequence)
    (string_fragment)
    (escape_sequence)
    (string_fragment)))

================================================================================
comment-like text in strings
================================================================================

"# not a comment"

--------------------------------------------------------------------------------

(source_code
  (string_expression
    (string_fragment)))
